Adedd create exercises option v14

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">FitnessHelper</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string-array name="categories">
+        <item></item>
+        <item>Mell</item>
+        <item>Hát</item>
+        <item>Váll</item>
+        <item>Láb</item>
+    </string-array>
+
 </resources>
