Added logout option to the toolbar on fragments, created realtime db "user" node after the first google signin , created spinner on CreateWorkoutTemplate and played with notifications, but not much as i wanted...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string-array name="categories">
-        <item></item>
+        <item>Izomcsoport</item>
         <item>Mell</item>
         <item>Hát</item>
         <item>Váll</item>
