Just a random commit in order to save files. :D Idk what is changed/added exactly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
         <item>Láb</item>
     </string-array>
 
+    <string-array name="diagrams">
+        <item>Válassz diagramot</item>
+        <item>Diagram1</item>
+        <item>Diagram2</item>
+        <item>Diagram3</item>
+    </string-array>
+
 </resources>
